--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -140,6 +140,8 @@
       path: /patterns/overflow-content
     - title: Search
       path: /patterns/search-pattern
+    - title: Text toolbar
+      path: /patterns/text-toolbar-pattern
 - title: Data visualization
   pages:
     - title: Get started
