fix(codeowners): update IoT/ai-applications owner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -23,7 +23,7 @@ src/pages/community/patterns/cards/* @adrianamorales
 src/pages/community/patterns/dashboard-widgets/* @adrianamorales
 
 # Chris Reckling is the code owner for Experimental IoT patterns
-src/pages/community/patterns/login-pattern/* @creckling
+src/pages/community/patterns/login-pattern/* @lukefirth
 
 # Eliad Moosavi and Natasha Decoste are the code owners for Data Visualization
 src/pages/data-visualization/* @theiliad @natashadecoste
