--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "gatsby develop -H 0.0.0.0",
     "dev:clean": "gatsby clean && yarn dev",
     "clean": "gatsby clean",
-    "build": "gatsby build",
+    "build": "node --max-old-space-size=8192 ./node_modules/.bin/gatsby build",
     "build:clean": "gatsby clean && yarn build",
     "build:analyze": "yarn install --force && yarn clean && ANALYZE=true yarn build",
     "serve": "gatsby serve",
@@ -16,7 +16,7 @@
     "update-browserslist": "npx browserslist-ga"
   },
   "engines": {
-    "node": "10.x || 12.x || 13.x"
+    "node": "10.x || 12.x || 14.x"
   },
   "browserslist": [
     "last 1 edge version",
