--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "update-browserslist": "npx browserslist-ga"
   },
   "engines": {
-    "node": "10.x || 12.x || 13.x"
+    "node": "12.x || 13.x"
   },
   "browserslist": [
     "last 1 edge version",
@@ -34,21 +34,22 @@
     "carbon-components-react": "^7.14.0"
   },
   "dependencies": {
+    "@babel/core": "^7.10.4",
     "@carbon/charts": "^0.32.12",
     "@carbon/charts-react": "^0.32.12",
     "@carbon/elements": "^10.14.0",
     "@carbon/icons": "^10.13.0",
     "@carbon/icons-react": "^10.13.0",
-    "@carbon/pictograms": "^10.13.0",
-    "@carbon/pictograms-react": "^10.13.0",
+    "@carbon/pictograms": "^10.14.0",
+    "@carbon/pictograms-react": "^10.14.0",
     "@loadable/babel-plugin": "^5.12.0",
     "@loadable/component": "^5.12.0",
     "@loadable/webpack-plugin": "^5.12.0",
     "@now/node": "^1.6.1",
     "@philpl/buble": "^0.19.7",
     "babel-preset-gatsby": "^0.2.29",
-    "carbon-components": "^10.14.0",
-    "carbon-components-react": "^7.14.0",
+    "carbon-components": "^10.15.0",
+    "carbon-components-react": "^7.15.0",
     "change-case": "^4.1.1",
     "classnames": "^2.2.6",
     "codesandbox": "^2.1.10",
@@ -56,19 +57,19 @@
     "d3": "^5.12.0",
     "dotenv": "^8.2.0",
     "fs-extra": "^8.1.0",
-    "gatsby": "^2.19.8",
+    "gatsby": "^2.23.22",
     "gatsby-plugin-fathom": "^1.1.1",
-    "gatsby-plugin-lodash": "^3.1.3",
+    "gatsby-plugin-lodash": "^3.3.9",
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-sitemap": "^2.2.30",
+    "gatsby-plugin-sitemap": "^2.4.10",
     "gatsby-theme-carbon": "^1.24.1",
     "html-loader": "^0.5.5",
     "lodash-es": "^4.17.15",
     "markdown-it": "^9.0.1",
     "markdown-loader": "^5.0.0",
     "nanoid": "^2.1.11",
-    "node-fetch": "^3.0.0-beta.5",
+    "node-fetch": "^3.0.0-beta.7",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -82,17 +83,17 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-config-wesbos": "0.0.19",
     "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.5",
     "husky": "^4.2.3",
-    "lint-staged": ">=10.0.9",
+    "lint-staged": ">=10.2.11",
     "prettier": "^2.0.2"
   },
   "husky": {
