--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,24 +15,16 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
       - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2-beta
         with:
           node-version: 12.x
-
-      - name: node_modules Cache
-        uses: actions/cache@v1
-        with:
-          path: ~/.cache/yarn
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
 
       - name: Install
         run: yarn install
       - name: Build
-        run: NODE_OPTIONS=--max_old_space_size=8192 yarn build
+        run: yarn build
 
       - name: Install IBM Cloud CLI
         run: curl -fsSL https://clis.cloud.ibm.com/install/osx | sh
