--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
+      - name: Check node_modules cache
+        id: node-modules-cache
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
+
       - name: Check Gatsby cache
         id: gatsby-cache
         uses: actions/cache@v2
@@ -41,10 +50,13 @@ jobs:
           path: |
             .cache
             public
-          key: ${{ runner.os }}-${{ hashFiles('gatsby-*.js') }}-${{ hashFiles('package.json') }}
+          key: ${{ runner.os }}-gatsby-${{ hashFiles('gatsby-*.js') }}-${{ hashFiles('package.json') }}
 
       - name: Install packages
-        run: yarn install --prefer-offline --frozen-lockfile --network-timeout 300000
+        if: |
+          steps.yarn-cache.outputs.cache-hit != 'true' ||
+          steps.node-modules-cache.outputs.cache-hit != 'true'
+        run: yarn install --frozen-lockfile --network-timeout 300000
 
       - name: Build site
         run: yarn build
