docs: add comment to action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,6 +78,7 @@ jobs:
         run: |
           ibmcloud cf v3-zdt-push carbon-website -b https://github.com/cloudfoundry/nginx-buildpack.git
 
+      # This let's us use the Vercel production deployment serverless functions (/api)
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v19
         with:
