--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "/node_modules/*"
   ],
   "resolutions": {
-    "carbon-components": "^10.14.0",
+    "carbon-components": "^10.16.0-rc.0",
     "carbon-components-react": "^7.14.0"
   },
   "dependencies": {
@@ -39,8 +39,8 @@
     "@carbon/elements": "^10.14.0",
     "@carbon/icons": "^10.13.0",
     "@carbon/icons-react": "^10.13.0",
-    "@carbon/pictograms": "^10.13.0",
-    "@carbon/pictograms-react": "^10.13.0",
+    "@carbon/pictograms": "^10.15.0-rc.0",
+    "@carbon/pictograms-react": "^10.15.0-rc.0",
     "@loadable/babel-plugin": "^5.12.0",
     "@loadable/component": "^5.12.0",
     "@loadable/webpack-plugin": "^5.12.0",
@@ -48,7 +48,7 @@
     "@philpl/buble": "^0.19.7",
     "babel-preset-gatsby": "^0.2.29",
     "carbon-components": "^10.14.0",
-    "carbon-components-react": "^7.14.0",
+    "carbon-components-react": "^7.16.0-rc.0",
     "change-case": "^4.1.1",
     "classnames": "^2.2.6",
     "codesandbox": "^2.1.10",
