--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "/node_modules/*"
   ],
   "resolutions": {
-    "carbon-components": "^10.16.0-rc.0",
-    "carbon-components-react": "^7.14.0"
+    "carbon-components": "^10.16.0-rc.1",
+    "carbon-components-react": "^7.16.0-rc.1"
   },
   "dependencies": {
     "@carbon/charts": "^0.32.12",
@@ -39,8 +39,8 @@
     "@carbon/elements": "^10.14.0",
     "@carbon/icons": "^10.13.0",
     "@carbon/icons-react": "^10.13.0",
-    "@carbon/pictograms": "^10.15.0-rc.0",
-    "@carbon/pictograms-react": "^10.15.0-rc.0",
+    "@carbon/pictograms": "^10.15.0-rc.1",
+    "@carbon/pictograms-react": "^10.15.0-rc.1",
     "@loadable/babel-plugin": "^5.12.0",
     "@loadable/component": "^5.12.0",
     "@loadable/webpack-plugin": "^5.12.0",
