chore(percy): add percy to website

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "use-resize-observer": "^4.0.0"
   },
   "devDependencies": {
+    "@percy/agent": "^0.27.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
@@ -89,6 +90,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "gatsby-plugin-percy": "^0.1.4",
     "husky": "^4.2.3",
     "lint-staged": ">=10.0.9",
     "prettier": "^2.0.2"
