Change Community to Community assets

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -195,7 +195,7 @@
       path: /help/support
     - title: FAQ
       path: /help/faq
-- title: Community
+- title: Community assets
   pages:
     - title: Overview
       path: /community/overview
