--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,10 @@ name: Deployment status
 ## - cron: '0 8 * * *'
 
 on:
+  workflow_dispatch:
+    inputs:
+      name:
+        description: "Reason"
   push:
     branches:
       - master
