--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,10 +9,10 @@ on:
     branches:
       - master
     paths-ignore: 
-      - docs/**
-      - .vscode/**
-      - .gitub/**
-      - !.github/workflows/deploy.yml # re-deploy after changes to deployment workflow
+      - 'docs/**'
+      - '.vscode/**'
+      - '.gitub/**'
+      - '!.github/workflows/deploy.yml' # re-deploy after changes to deployment workflow
 
 jobs:
   build:
