--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "carbondesignsystem",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "private": true,
+  "version": "0.0.0",
+  "license": "Apache-2.0",
   "scripts": {
     "dev": "gatsby develop -H 0.0.0.0",
     "dev:clean": "gatsby clean && yarn dev",
@@ -17,6 +17,12 @@
   },
   "engines": {
     "node": "10.x || 12.x || 13.x"
+  },
+  "workspaces": {
+    "packages": [
+      "plugins/*"
+    ],
+    "nohoist": []
   },
   "browserslist": [
     "last 1 edge version",
