--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "copy-to-clipboard": "^3.2.1",
     "d3": "^5.12.0",
     "dotenv": "^8.2.0",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "^9.0.1",
     "gatsby": "^2.19.8",
     "gatsby-plugin-fathom": "^1.1.1",
     "gatsby-plugin-lodash": "^3.1.3",
@@ -79,6 +79,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "csvtojson": "^2.0.10",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
@@ -90,6 +91,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^4.2.3",
+    "js-yaml": "^3.14.0",
     "lint-staged": ">=10.0.9",
     "prettier": "^2.0.2"
   },
