feat(project): add plugin for component index

--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "carbondesignsystem",
+  "private": true,
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "workspaces": {
+    "packages": [
+      "plugins/*"
+    ],
+    "nohoist": []
+  },
   "scripts": {
     "dev": "gatsby develop -H 0.0.0.0",
     "dev:clean": "gatsby clean && yarn dev",
@@ -79,7 +86,6 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "csvtojson": "^2.0.10",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
@@ -91,7 +97,6 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^4.2.3",
-    "js-yaml": "^3.14.0",
     "lint-staged": ">=10.0.9",
     "prettier": "^2.0.2"
   },
