fix(data): update index data

--- a/src/data/index/cdai/headers.yml
+++ b/src/data/index/cdai/headers.yml
@@ -1,6 +1,6 @@
 name: Headers
 link: 'https://pages.github.ibm.com/cdai-design/pal/components/headers'
-maintainer: cdai
+maintainer: CD&AI
 description: >-
   All products within the IBM Cloud Pak for Integration should use the
   recommended header. Exception is if a product requires a version of the header
