--- a/src/data/index/cdai/persistent-banner.yml
+++ b/src/data/index/cdai/persistent-banner.yml
@@ -1,6 +1,6 @@
 name: Persistent banner
 link: 'https://pages.github.ibm.com/cdai-design/pal/wip/persistent-banner'
-maintainer: cdai
+maintainer: CD&AI
 framework: React
 design_asset: Sketch
 aliases: []
