--- a/src/data/index/cdai/slide-over-panel.yml
+++ b/src/data/index/cdai/slide-over-panel.yml
@@ -1,6 +1,6 @@
 name: Slide-over panel
 link: 'https://pages.github.ibm.com/cdai-design/pal/components/slide-over-panel/usage'
-maintainer: cdai
+maintainer: CD&AI
 description: >-
   The slide over panel opens as the result of a user action and can be opened
   from anywhere in the product UI. It will overlay the main page content.
