--- a/src/data/index/cdai/widget.yml
+++ b/src/data/index/cdai/widget.yml
@@ -1,6 +1,6 @@
 name: Widget
 link: 'https://pages.github.ibm.com/cdai-design/pal/components/widget/usage'
-maintainer: cdai
+maintainer: CD&AI
 description: >-
   A dashboard widget provides a summary of a platform functionality, status, or
   individual service. The goal of a widget is to provide actionable information
