--- a/src/data/index/cloud-pal/card.yml
+++ b/src/data/index/cloud-pal/card.yml
@@ -1,6 +1,6 @@
 name: Card
 link: 'https://pages.github.ibm.com/ibmcloud/pal/components/card/usage'
-maintainer: cloud-pal
+maintainer: Cloud PAL
 description: >-
   A card is a flexible-sized container that groups related blocks of content and
   information into one understandable unit.
