--- a/src/data/index/cloud-pal/enhanced-data-table.yml
+++ b/src/data/index/cloud-pal/enhanced-data-table.yml
@@ -1,6 +1,6 @@
 name: Enhanced data table
 link: 'https://pages.github.ibm.com/ibmcloud/pal/components/enhanced-data-table/code'
-maintainer: cloud-pal
+maintainer: Cloud PAL
 description: >-
   EnhancedDataTable is meant to be used in place of the carbon DataTable. It is
   intended to make working with the DataTable much simpler and provide a more
