--- a/src/data/index/cloud-pal/l2-world-level-nav.yml
+++ b/src/data/index/cloud-pal/l2-world-level-nav.yml
@@ -1,6 +1,6 @@
 name: L2 (world level nav)
 link: 'https://pages.github.ibm.com/ibmcloud/pal/components/world-level-nav/usage'
-maintainer: cloud-pal
+maintainer: Cloud PAL
 description: >-
   A component used for navigation of a world pages. It is used for switching
   page views within a world. The World Level Nav (L2) supports menus by adding
