--- a/src/data/index/watson-health/action-widget.yml
+++ b/src/data/index/watson-health/action-widget.yml
@@ -1,7 +1,7 @@
 name: Action widget
 link: >-
   https://pages.github.ibm.com/Watson-Health/components/action-widget/overview.html
-maintainer: watson-health
+maintainer: Watson Health
 description: >-
   The action widget is used to provide a menu of available actions within a
   widget or application.
