--- a/src/data/index/watson-health/annotation.yml
+++ b/src/data/index/watson-health/annotation.yml
@@ -1,6 +1,6 @@
 name: Annotation
 link: 'https://pages.github.ibm.com/Watson-Health/components/annotation/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 description: >-
   Annotations are used to highlight important or insightful information within a
   large text passage.
