--- a/src/data/index/watson-health/button.yml
+++ b/src/data/index/watson-health/button.yml
@@ -1,4 +1,4 @@
 name: Button
 link: 'https://pages.github.ibm.com/Watson-Health/components/button/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
