--- a/src/data/index/watson-health/definition-tooltip.yml
+++ b/src/data/index/watson-health/definition-tooltip.yml
@@ -1,5 +1,5 @@
 name: Definition tooltip
 link: >-
   https://pages.github.ibm.com/Watson-Health/components/definition-tooltip/overview.html
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
