--- a/src/data/index/watson-health/dropdown.yml
+++ b/src/data/index/watson-health/dropdown.yml
@@ -1,4 +1,4 @@
 name: Dropdown
 link: 'https://pages.github.ibm.com/Watson-Health/components/dropdown/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
