--- a/src/data/index/watson-health/heading.yml
+++ b/src/data/index/watson-health/heading.yml
@@ -1,6 +1,6 @@
 name: Heading
 link: 'https://pages.github.ibm.com/Watson-Health/components/heading/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 description: >-
   Headings are text elements that are used to add typographic hierarchy to a
   page or component’s content.
