--- a/src/data/index/watson-health/list.yml
+++ b/src/data/index/watson-health/list.yml
@@ -1,4 +1,4 @@
 name: List
 link: 'https://pages.github.ibm.com/Watson-Health/components/list/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
