--- a/src/data/index/watson-health/modal.yml
+++ b/src/data/index/watson-health/modal.yml
@@ -1,4 +1,4 @@
 name: Modal
 link: 'https://pages.github.ibm.com/Watson-Health/components/modal/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
