--- a/src/data/index/watson-health/notification.yml
+++ b/src/data/index/watson-health/notification.yml
@@ -1,5 +1,5 @@
 name: Notification
 link: >-
   https://pages.github.ibm.com/Watson-Health/components/notification/overview.html
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
