--- a/src/data/index/watson-health/overflow-menu.yml
+++ b/src/data/index/watson-health/overflow-menu.yml
@@ -1,5 +1,5 @@
 name: Overflow menu
 link: >-
   https://pages.github.ibm.com/Watson-Health/components/overflow-menu/overview.html
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
