--- a/src/data/index/watson-health/selectable-item.yml
+++ b/src/data/index/watson-health/selectable-item.yml
@@ -1,7 +1,7 @@
 name: Selectable item
 link: >-
   https://pages.github.ibm.com/Watson-Health/components/selectable-item/overview.html
-maintainer: watson-health
+maintainer: Watson Health
 description: >-
   Use when the user may select one option from a mutually exclusive list of
   options (substitute for radio buttons). Use when the user may select one or
