--- a/src/data/index/watson-health/slider.yml
+++ b/src/data/index/watson-health/slider.yml
@@ -1,6 +1,6 @@
 name: Slider
 link: 'https://pages.github.ibm.com/Watson-Health/components/slider/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 description: >-
   The user is able to increase and decrease two controls in order to specify a
   range of values.
