--- a/src/data/index/watson-health/tag.yml
+++ b/src/data/index/watson-health/tag.yml
@@ -1,6 +1,6 @@
 name: Tag
 link: 'https://pages.github.ibm.com/Watson-Health/components/tag/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 description: >-
   Use tags for items that need to be labeled, categorized, or organized using
   keywords that describe them. Tags can also be interactive, providing a
