--- a/src/data/index/watson-health/toggle.yml
+++ b/src/data/index/watson-health/toggle.yml
@@ -1,4 +1,4 @@
 name: Toggle
 link: 'https://pages.github.ibm.com/Watson-Health/components/toggle/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
