--- a/src/data/index/watson-health/user-message.yml
+++ b/src/data/index/watson-health/user-message.yml
@@ -1,7 +1,7 @@
 name: User message
 link: >-
   https://pages.github.ibm.com/Watson-Health/components/user-message/overview.html
-maintainer: watson-health
+maintainer: Watson Health
 description: >-
   The user message component is a sub-component that is used within the Ask
   Watson Conversation pattern. It is used to denote which messages in a
