--- a/src/data/index/watson-iot/catalog-marketplace.yml
+++ b/src/data/index/watson-iot/catalog-marketplace.yml
@@ -1,7 +1,7 @@
 name: Catalog / marketplace
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/catalog-marketplace/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   The catalog series of components work together to support the ‘catalog’ UX
   pattern (to come), with a series of tiles to display resources in a friendly,
