--- a/src/data/index/watson-iot/date-time-range-selector.yml
+++ b/src/data/index/watson-iot/date-time-range-selector.yml
@@ -1,7 +1,7 @@
 name: Date time range selector
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/datetime/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   Used significantly with dashboards, this enhancement to the Carbon date
   picker, the date/time range selector enables users to easily choose from a
