--- a/src/data/index/watson-iot/dividers.yml
+++ b/src/data/index/watson-iot/dividers.yml
@@ -1,7 +1,7 @@
 name: Dividers
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/dividers/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   Divders are horizontal or vertical rules that are 1px lines with padding on
   either side, used to create a visual break between areas of content.
