--- a/src/data/index/watson-iot/dropdown.yml
+++ b/src/data/index/watson-iot/dropdown.yml
@@ -1,7 +1,7 @@
 name: Dropdown
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/dropdown/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   The dropdown component allows the user to select from a pre-existing set of
   options. Use the Combobox component instead if the user can also add a new
