--- a/src/data/index/watson-iot/fixed-button-bar.yml
+++ b/src/data/index/watson-iot/fixed-button-bar.yml
@@ -1,7 +1,7 @@
 name: Fixed button bar
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/fixedbuttonbar/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   A sticky or fixed button bar should be used for certain forms. See the UX
   Patterns > Forms for design options and guidelines.
