--- a/src/data/index/watson-iot/floating-palette.yml
+++ b/src/data/index/watson-iot/floating-palette.yml
@@ -1,7 +1,7 @@
 name: Floating palette
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/floatingpalette/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   The palette is to be used in partnership with a Canvas (see dashboard
   configuration pattern), and functions as a method for users to browse a set of
