--- a/src/data/index/watson-iot/icon-buttons.yml
+++ b/src/data/index/watson-iot/icon-buttons.yml
@@ -1,7 +1,7 @@
 name: Icon buttons
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/iconbuttons/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   The IoT PAL extends the Carbon offering of icon buttons with a number of small
   use cases centered around icon based buttons.
