--- a/src/data/index/watson-iot/large-modals.yml
+++ b/src/data/index/watson-iot/large-modals.yml
@@ -1,7 +1,7 @@
 name: Large modals
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/largemodals/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   Within complex application patterns, it is sometimes a necessity to place
   complex or very large interactions within a modal context such as in the
