--- a/src/data/index/watson-iot/list.yml
+++ b/src/data/index/watson-iot/list.yml
@@ -1,7 +1,7 @@
 name: List
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/list/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   A sibling of the data table component, lists are to be used when a number of
   items need to be viewed, updated and managed.
