--- a/src/data/index/watson-iot/password-input.yml
+++ b/src/data/index/watson-iot/password-input.yml
@@ -1,7 +1,7 @@
 name: Password input
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/passwordinput/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   The password input is a specific example of the Carbon text input in its
   password form, included here for demonstration purposes.
