--- a/src/data/index/watson-iot/progress-indicator.yml
+++ b/src/data/index/watson-iot/progress-indicator.yml
@@ -1,7 +1,7 @@
 name: Progress indicator
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/progressindicator/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   The progress indicator used within the IoT PAL is partially guidance based,
   but also provides some new capabilities in the form of sub-steps and
