--- a/src/data/index/watson-iot/rule-builder.yml
+++ b/src/data/index/watson-iot/rule-builder.yml
@@ -1,7 +1,7 @@
 name: Rule builder
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/rulebuilder/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   Used to visually build rules from logical statements with AND and OR
   operators.
