--- a/src/data/index/watson-iot/tile.yml
+++ b/src/data/index/watson-iot/tile.yml
@@ -1,7 +1,7 @@
 name: Tile
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/tile/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   Tiles are a flexible component for displaying a wide variety of content,
   including informational, getting started, how-to, next steps, and more. The
