--- a/src/data/index/watson-iot/ui-shell-header.yml
+++ b/src/data/index/watson-iot/ui-shell-header.yml
@@ -1,7 +1,7 @@
 name: UI shell header
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/ui-shell-header/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   The UI shell header forms the uppermost bar of applications and provides users
   with things such as the application name, and access to common actions.
