--- a/src/data/index/watson-iot/ui-shell-side-nav.yml
+++ b/src/data/index/watson-iot/ui-shell-side-nav.yml
@@ -1,7 +1,7 @@
 name: UI shell side nav
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/ui-shell-side-nav/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   The UI shell side nav panel provides users with their primary method of
   navigating around the different areas of our applications from the left hand
