--- a/src/data/index/cdai/cards.yml
+++ b/src/data/index/cdai/cards.yml
@@ -1,6 +1,6 @@
 name: Cards
 link: 'https://pages.github.ibm.com/cdai-design/pal/components/card/usage'
-maintainer: cdai
+maintainer: CD&AI
 description: >-
   A card is a flexible-sized container that groups related blocks of content and
   information into one understandable unit.
