--- a/src/data/index/cdai/modified-tabs.yml
+++ b/src/data/index/cdai/modified-tabs.yml
@@ -1,6 +1,6 @@
 name: Modified tabs
 link: 'https://pages.github.ibm.com/cdai-design/pal/components/modified-tabs'
-maintainer: cdai
+maintainer: CD&AI
 description: >-
   Modified tabs are used to quickly add or remove tabs. They allow users to view
   multiple pages of their product in one browser window.
