--- a/src/data/index/cdai/multistep-confirmation.yml
+++ b/src/data/index/cdai/multistep-confirmation.yml
@@ -1,6 +1,6 @@
 name: Multistep confirmation
 link: 'https://pages.github.ibm.com/cdai-design/pal/wip/multistep-confirmation'
-maintainer: cdai
+maintainer: CD&AI
 description: >-
   Component created that allows users to know exactly which operations are being
   taken as a result of an action or set of actions that they have completed.
