--- a/src/data/index/cdai/slide-in-panel.yml
+++ b/src/data/index/cdai/slide-in-panel.yml
@@ -1,6 +1,6 @@
 name: Slide-in panel
 link: 'https://pages.github.ibm.com/cdai-design/pal/components/slide-in-panel'
-maintainer: cdai
+maintainer: CD&AI
 description: >-
   Opens as the result of a user action. This component is an empty framework of
   which the content should be determined as required by products.
