--- a/src/data/index/cloud-pal/l3-world-level-nav.yml
+++ b/src/data/index/cloud-pal/l3-world-level-nav.yml
@@ -1,6 +1,6 @@
 name: L3 (world level nav)
 link: 'https://pages.github.ibm.com/ibmcloud/pal/components/resource-level-nav/usage'
-maintainer: cloud-pal
+maintainer: Cloud PAL
 description: >-
   The L3 nav, or resource level navigation component, is the suggested
   navigation for a resource details page. Learn more about other navigation
