--- a/src/data/index/cloud-pal/order-summary-v2.yml
+++ b/src/data/index/cloud-pal/order-summary-v2.yml
@@ -1,6 +1,6 @@
 name: Order summary v2
 link: 'https://pages.github.ibm.com/ibmcloud/pal/components/order-summary-v2/usage'
-maintainer: cloud-pal
+maintainer: Cloud PAL
 description: >-
   The order summary component summarizes the estimated financial costs and
   details of a service or offering on IBM Cloud.
