--- a/src/data/index/cloud-pal/page-header.yml
+++ b/src/data/index/cloud-pal/page-header.yml
@@ -1,6 +1,6 @@
 name: Page header
 link: 'https://pages.github.ibm.com/ibmcloud/pal/components/page-header/usage'
-maintainer: cloud-pal
+maintainer: Cloud PAL
 description: >-
   All pages in IBM Cloud should have a page header. The purpose of a page header
   is to: provide context for the entire page and tell the user exactly where
