--- a/src/data/index/cloud-pal/side-panel.yml
+++ b/src/data/index/cloud-pal/side-panel.yml
@@ -1,6 +1,6 @@
 name: Side panel
 link: 'https://pages.github.ibm.com/ibmcloud/pal/components/side-panel/usage'
-maintainer: cloud-pal
+maintainer: Cloud PAL
 description: >-
   The side panel is used for keeping users in-context to a page while performing
   a task like editing, viewing details, or creating something new on a page.
