--- a/src/data/index/watson-health/checkbox.yml
+++ b/src/data/index/watson-health/checkbox.yml
@@ -1,4 +1,4 @@
 name: Checkbox
 link: 'https://pages.github.ibm.com/Watson-Health/components/checkbox/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
