--- a/src/data/index/watson-health/data-table.yml
+++ b/src/data/index/watson-health/data-table.yml
@@ -1,4 +1,4 @@
 name: Data table
 link: 'https://pages.github.ibm.com/Watson-Health/components/data-table/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
