--- a/src/data/index/watson-health/form.yml
+++ b/src/data/index/watson-health/form.yml
@@ -1,4 +1,4 @@
 name: Form
 link: 'https://pages.github.ibm.com/Watson-Health/components/form/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
