--- a/src/data/index/watson-health/icon.yml
+++ b/src/data/index/watson-health/icon.yml
@@ -1,4 +1,4 @@
 name: Icon
 link: 'https://pages.github.ibm.com/Watson-Health/components/icon/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
