--- a/src/data/index/watson-health/interactive-tooltip.yml
+++ b/src/data/index/watson-health/interactive-tooltip.yml
@@ -1,6 +1,6 @@
 name: Interactive tooltip
 link: 'https://pages.github.ibm.com/Watson-Health/components/tooltip/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 description: >-
   Use tooltips when a user needs to access additional text and/or functionality
   related to a specific element, without losing context.
