--- a/src/data/index/watson-health/label.yml
+++ b/src/data/index/watson-health/label.yml
@@ -1,5 +1,5 @@
 name: Label
 link: 'https://pages.github.ibm.com/Watson-Health/components/label/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 description: Labels are used to provide textual information about a specific form item.
 aliases: []
