--- a/src/data/index/watson-health/text-input.yml
+++ b/src/data/index/watson-health/text-input.yml
@@ -1,4 +1,4 @@
 name: Text input
 link: 'https://pages.github.ibm.com/Watson-Health/components/text-input/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
