--- a/src/data/index/watson-health/tile.yml
+++ b/src/data/index/watson-health/tile.yml
@@ -1,4 +1,4 @@
 name: Tile
 link: 'https://pages.github.ibm.com/Watson-Health/components/tile/overview.html'
-maintainer: watson-health
+maintainer: Watson Health
 aliases: []
