--- a/src/data/index/watson-iot/charts.yml
+++ b/src/data/index/watson-iot/charts.yml
@@ -1,6 +1,6 @@
 name: Charts
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/charts/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 design_asset: Sketch
 aliases: []
