--- a/src/data/index/watson-iot/combo-box.yml
+++ b/src/data/index/watson-iot/combo-box.yml
@@ -1,7 +1,7 @@
 name: Combo box
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/combobox/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   A tool that allows inputs to be either supplied or selected from a list of
   suggestions, similar to autocomplete.
