--- a/src/data/index/watson-iot/data-table.yml
+++ b/src/data/index/watson-iot/data-table.yml
@@ -1,7 +1,7 @@
 name: Data table
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/datatable/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   The jewel of the IoT PAL, the data table provides a compact layout for viewing
   and managing large quantities of data.
