--- a/src/data/index/watson-iot/icon-tabs.yml
+++ b/src/data/index/watson-iot/icon-tabs.yml
@@ -1,7 +1,7 @@
 name: Icon tabs
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/icontabs/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   Icon tabs allow for navigation between groups of content at the same level of
   hierarchy when space is at an extreme premium.
