--- a/src/data/index/watson-iot/link-bar.yml
+++ b/src/data/index/watson-iot/link-bar.yml
@@ -1,7 +1,7 @@
 name: Link bar
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/linkbar/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   A lightweight alternative to the content switcher component where its usage
   would be inappropriately heavy in visual weight for the desired information
