--- a/src/data/index/watson-iot/list-builder.yml
+++ b/src/data/index/watson-iot/list-builder.yml
@@ -1,7 +1,7 @@
 name: List builder
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/listbuilder/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   This high level component is dedicated to the population of lists by a user by
   selecting items from another predefined set of items.
