--- a/src/data/index/watson-iot/menus.yml
+++ b/src/data/index/watson-iot/menus.yml
@@ -1,7 +1,7 @@
 name: Menus
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/menus/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   Menus act as an extension to the base set of capabilities that comes with
   traditional overflow menu options with the ability to contain a large range of
