--- a/src/data/index/watson-iot/page-title-bar.yml
+++ b/src/data/index/watson-iot/page-title-bar.yml
@@ -1,7 +1,7 @@
 name: Page title bar
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/page-title-bar/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   At the top of every page in an application, beneath the primary header you
   will find the page title bar informing the user of where they are and briefly
