--- a/src/data/index/watson-iot/pagination.yml
+++ b/src/data/index/watson-iot/pagination.yml
@@ -1,7 +1,7 @@
 name: Pagination
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/pagination/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   The IoT PAL supports a large variety of pagination types for differing types
   of use case and pattern.
