--- a/src/data/index/watson-iot/search.yml
+++ b/src/data/index/watson-iot/search.yml
@@ -1,7 +1,7 @@
 name: Search
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/search/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   An enhanced component built to allow users to rapidly find a given result from
   a large list of possibilities.
