--- a/src/data/index/watson-iot/status-icons.yml
+++ b/src/data/index/watson-iot/status-icons.yml
@@ -1,7 +1,7 @@
 name: Status icons
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/statusicons/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   Status icons are used to convey information quickly through the use of color
   and shape. You can use them in a variety of contexts.
