--- a/src/data/index/watson-iot/tabs-guidance.yml
+++ b/src/data/index/watson-iot/tabs-guidance.yml
@@ -1,7 +1,7 @@
 name: Tabs (guidance)
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/tabs/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   When an area of an application has either too much content, or content with
   too clear a difference logically to fit in a single page, the page tabs
