--- a/src/data/index/watson-iot/text-inputs.yml
+++ b/src/data/index/watson-iot/text-inputs.yml
@@ -1,7 +1,7 @@
 name: Text inputs
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/textinputs/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 framework: React
 design_asset: Sketch
 aliases: []
