--- a/src/data/index/watson-iot/toggle.yml
+++ b/src/data/index/watson-iot/toggle.yml
@@ -1,7 +1,7 @@
 name: Toggle
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/toggle/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   The toggles in the IoT PAL simply extend the base Carbon offering through the
   addition of the ability place the ‘value’ on the left hand side of the toggle
