--- a/src/data/index/watson-iot/ui-shell-right-panel.yml
+++ b/src/data/index/watson-iot/ui-shell-right-panel.yml
@@ -1,7 +1,7 @@
 name: UI shell right panel
 link: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/ui-shell-header-panel/overview
-maintainer: watson-iot
+maintainer: Watson IoT
 description: >-
   Reachable via the utility icons in the header, the UI shell panel provides an
   optional space to shows additional system level actions or content associated
