--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^4.2.3",
     "lint-staged": ">=10.0.9",
-    "prettier": "^2.0.2"
+    "prettier": "^2.0.2",
+    "prettier-config-carbon": "^0.2.0"
   },
   "husky": {
     "hooks": {
