--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "carbondesignsystem",
+  "private": true,
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "workspaces": {
+    "packages": [
+      "plugins/*"
+    ],
+    "nohoist": []
+  },
   "scripts": {
     "dev": "gatsby develop -H 0.0.0.0",
     "dev:clean": "gatsby clean && yarn dev",
@@ -53,7 +60,7 @@
     "copy-to-clipboard": "^3.2.1",
     "d3": "^5.12.0",
     "dotenv": "^8.2.0",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "^9.0.1",
     "gatsby": "^2.19.8",
     "gatsby-plugin-fathom": "^1.1.1",
     "gatsby-plugin-lodash": "^3.1.3",
