added all files - still need to add styling

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -205,3 +205,5 @@
       path: /community/patterns
     - title: Domain guidance
       path: /community/domain-guidance
+    - title: Component Index
+      path: /community/component-index
