--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@now/node": "^1.6.1",
     "@philpl/buble": "^0.19.7",
     "babel-preset-gatsby": "^0.2.29",
+    "carbon-components-react": "^7.16.0",
     "change-case": "^4.1.1",
     "classnames": "^2.2.6",
     "codesandbox": "^2.1.10",
