Concept for a work in progress page

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -189,6 +189,8 @@
       path: /updates/whats-new
     - title: Migration guide
       path: /updates/migration-guide/overview
+    - title: Work in progress
+      path: /updates/work-in-progress
 - title: Help
   pages:
     - title: Support
