--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "fuse.js": "^6.4.1",
     "husky": "^4.2.3",
     "lint-staged": ">=10.0.9",
     "prettier": "^2.0.2",
