chore(project): update index data with latest batch

--- a/src/data/index/cdai/slide-over-panel.yml
+++ b/src/data/index/cdai/slide-over-panel.yml
@@ -1,9 +1,12 @@
 name: Slide-over panel
-link: 'https://pages.github.ibm.com/cdai-design/pal/components/slide-over-panel/usage'
+website_url: 'https://pages.github.ibm.com/cdai-design/pal/components/slide-over-panel/usage'
 maintainer: CD&AI
 description: >-
   The slide over panel opens as the result of a user action and can be opened
   from anywhere in the product UI. It will overlay the main page content.
-framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: IBM Internal
+aliases:
+  - side panel
+date_added: 2020-08-04T00:00:00.000Z
