--- a/src/data/index/cdai/widget.yml
+++ b/src/data/index/cdai/widget.yml
@@ -1,9 +1,13 @@
 name: Widget
-link: 'https://pages.github.ibm.com/cdai-design/pal/components/widget/usage'
+website_url: 'https://pages.github.ibm.com/cdai-design/pal/components/widget/usage'
 maintainer: CD&AI
 description: >-
   A dashboard widget provides a summary of a platform functionality, status, or
   individual service. The goal of a widget is to provide actionable information
   that helps the user quickly accomplish a key task or track key metrics.
 framework: React
-aliases: []
+platform: Web
+availability: IBM Internal
+aliases:
+  - dashboard
+date_added: 2020-08-04T00:00:00.000Z
