--- a/src/data/index/cloud-pal/card.yml
+++ b/src/data/index/cloud-pal/card.yml
@@ -1,5 +1,6 @@
 name: Card
-link: 'https://pages.github.ibm.com/ibmcloud/pal/components/card/usage'
+website_url: 'https://pages.github.ibm.com/ibmcloud/pal/components/card/usage'
+code_url: 'https://github.ibm.com/ibmcloud/pal/tree/master/patterns/src/Components/Card'
 maintainer: Cloud PAL
 description: >-
   A card is a flexible-sized container that groups related blocks of content and
@@ -11,3 +12,5 @@ availability: IBM Internal
 aliases:
   - tile
   - module
+  - container
+date_added: 2020-08-04T00:00:00.000Z
