--- a/src/data/index/watson-iot/dropdown.yml
+++ b/src/data/index/watson-iot/dropdown.yml
@@ -1,5 +1,5 @@
 name: Dropdown
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/dropdown/overview
 maintainer: Watson IoT
 description: >-
@@ -8,4 +8,9 @@ description: >-
   option.
 framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+aliases:
+  - combo box
+  - multiselect
+  - select
+date_added: 2020-08-04T00:00:00.000Z
