--- a/src/data/index/watson-iot/floating-palette.yml
+++ b/src/data/index/watson-iot/floating-palette.yml
@@ -1,5 +1,5 @@
 name: Floating palette
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/floatingpalette/overview
 maintainer: Watson IoT
 description: >-
@@ -8,4 +8,7 @@ description: >-
   objects such as charts, before inserting them onto their canvas.
 framework: React
 design_asset: Sketch
+platform: Web
+availability: Open Source
 aliases: []
+date_added: 2020-08-04T00:00:00.000Z
