--- a/src/data/index/watson-iot/link-bar.yml
+++ b/src/data/index/watson-iot/link-bar.yml
@@ -1,5 +1,5 @@
 name: Link bar
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/linkbar/overview
 maintainer: Watson IoT
 description: >-
@@ -9,4 +9,8 @@ description: >-
   (see usage guidelines for more).
 framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: Open Source
+aliases:
+  - content switcher
+date_added: 2020-08-04T00:00:00.000Z
