--- a/src/data/index/watson-iot/password-input.yml
+++ b/src/data/index/watson-iot/password-input.yml
@@ -1,9 +1,13 @@
 name: Password input
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/passwordinput/overview
 maintainer: Watson IoT
 description: >-
   The password input is a specific example of the Carbon text input in its
   password form, included here for demonstration purposes.
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: Open Source
+aliases:
+  - form
+date_added: 2020-08-04T00:00:00.000Z
