--- a/src/data/index/watson-iot/progress-indicator.yml
+++ b/src/data/index/watson-iot/progress-indicator.yml
@@ -1,10 +1,16 @@
 name: Progress indicator
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/progressindicator/overview
+code_url: >-
+  https://carbon-addons-iot-react.com/?path=/story/watson-iot-pagewizard--stateful-example
 maintainer: Watson IoT
 description: >-
   The progress indicator used within the IoT PAL is partially guidance based,
   but also provides some new capabilities in the form of sub-steps and
   responsive.
 framework: React
-aliases: []
+platform: Web
+availability: Open Source
+aliases:
+  - form
+date_added: 2020-08-04T00:00:00.000Z
