--- a/src/data/index/watson-iot/search.yml
+++ b/src/data/index/watson-iot/search.yml
@@ -1,5 +1,5 @@
 name: Search
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/search/overview
 maintainer: Watson IoT
 description: >-
@@ -7,4 +7,7 @@ description: >-
   a large list of possibilities.
 framework: React
 design_asset: Sketch
+platform: Web
+availability: Open Source
 aliases: []
+date_added: 2020-08-04T00:00:00.000Z
