--- a/src/data/index/watson-iot/tile.yml
+++ b/src/data/index/watson-iot/tile.yml
@@ -1,6 +1,7 @@
 name: Tile
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/tile/overview
+code_url: 'https://carbon-addons-iot-react.com/?path=/story/watson-iot-card--basic'
 maintainer: Watson IoT
 description: >-
   Tiles are a flexible component for displaying a wide variety of content,
@@ -10,4 +11,10 @@ description: >-
   with custom tiles.
 framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: Open Source
+aliases:
+  - container
+  - card
+  - module
+date_added: 2020-08-04T00:00:00.000Z
