--- a/src/data/index/cdai/cards.yml
+++ b/src/data/index/cdai/cards.yml
@@ -1,10 +1,14 @@
 name: Cards
-link: 'https://pages.github.ibm.com/cdai-design/pal/components/card/usage'
+website_url: 'https://pages.github.ibm.com/cdai-design/pal/components/card/usage'
 maintainer: CD&AI
 description: >-
   A card is a flexible-sized container that groups related blocks of content and
   information into one understandable unit.
-framework: React
-design_asset: Sketch
 platform: Web
-aliases: []
+availability: IBM Internal
+aliases:
+  - tile
+  - module
+  - container
+  - card
+date_added: 2020-08-04T00:00:00.000Z
