--- a/src/data/index/cdai/headers.yml
+++ b/src/data/index/cdai/headers.yml
@@ -1,10 +1,13 @@
 name: Headers
-link: 'https://pages.github.ibm.com/cdai-design/pal/components/headers'
+website_url: 'https://pages.github.ibm.com/cdai-design/pal/components/headers'
 maintainer: CD&AI
 description: >-
   All products within the IBM Cloud Pak for Integration should use the
   recommended header. Exception is if a product requires a version of the header
   that needs to allow for customization by customers
-framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: IBM Internal
+aliases:
+  - navigation
+date_added: 2020-08-04T00:00:00.000Z
