--- a/src/data/index/cdai/modified-tabs.yml
+++ b/src/data/index/cdai/modified-tabs.yml
@@ -1,8 +1,10 @@
 name: Modified tabs
-link: 'https://pages.github.ibm.com/cdai-design/pal/components/modified-tabs'
+website_url: 'https://pages.github.ibm.com/cdai-design/pal/components/modified-tabs'
 maintainer: CD&AI
 description: >-
   Modified tabs are used to quickly add or remove tabs. They allow users to view
   multiple pages of their product in one browser window.
-framework: React
+platform: Web
+availability: IBM Internal
 aliases: []
+date_added: 2020-08-04T00:00:00.000Z
