--- a/src/data/index/cdai/page-header.yml
+++ b/src/data/index/cdai/page-header.yml
@@ -1,11 +1,14 @@
 name: Page header
-link: 'https://pages.github.ibm.com/cdai-design/pal/components/page-header/usage'
+website_url: 'https://pages.github.ibm.com/cdai-design/pal/components/page-header/usage'
 maintainer: CD&AI
 description: >-
   The page header allows consistency in the spacing and location of items inside
   page headers within a product and across products. This avoids users
   experiencing jarring movement and jumping of headers when navigating among
   product content.
-framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: IBM Internal
+aliases:
+  - navigation
+date_added: 2020-08-04T00:00:00.000Z
