--- a/src/data/index/cdai/slide-in-panel.yml
+++ b/src/data/index/cdai/slide-in-panel.yml
@@ -1,9 +1,12 @@
 name: Slide-in panel
-link: 'https://pages.github.ibm.com/cdai-design/pal/components/slide-in-panel'
+website_url: 'https://pages.github.ibm.com/cdai-design/pal/components/slide-in-panel'
 maintainer: CD&AI
 description: >-
   Opens as the result of a user action. This component is an empty framework of
   which the content should be determined as required by products.
-framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: IBM Internal
+aliases:
+  - side panel
+date_added: 2020-08-04T00:00:00.000Z
