--- a/src/data/index/watson-health/action-widget.yml
+++ b/src/data/index/watson-health/action-widget.yml
@@ -1,9 +1,15 @@
 name: Action widget
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-Health/components/action-widget/overview.html
+code_url: >-
+  https://github.ibm.com/Watson-Health/design-library/tree/develop/packages/pattern-library/src/components/action-widget
 maintainer: Watson Health
 description: >-
   The action widget is used to provide a menu of available actions within a
   widget or application.
+framework: Vanilla
+design_asset: Sketch
 platform: Web
-aliases: []
+aliases:
+  - dashboard
+date_added: 2020-08-04T00:00:00.000Z
