--- a/src/data/index/watson-health/slider.yml
+++ b/src/data/index/watson-health/slider.yml
@@ -1,7 +1,14 @@
 name: Slider
-link: 'https://pages.github.ibm.com/Watson-Health/components/slider/overview.html'
+website_url: 'https://pages.github.ibm.com/Watson-Health/components/slider/overview.html'
+code_url: >-
+  https://github.ibm.com/Watson-Health/design-library/tree/develop/packages/pattern-library/src/components/slider
 maintainer: Watson Health
 description: >-
   The user is able to increase and decrease two controls in order to specify a
   range of values.
-aliases: []
+framework: Vanilla
+design_asset: Sketch
+platform: Web
+aliases:
+  - range slider
+date_added: 2020-08-04T00:00:00.000Z
