--- a/src/data/index/watson-iot/catalog-marketplace.yml
+++ b/src/data/index/watson-iot/catalog-marketplace.yml
@@ -1,6 +1,8 @@
 name: Catalog / marketplace
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/catalog-marketplace/overview
+code_url: >-
+  https://carbon-addons-iot-react.com/?path=/story/watson-iot-tilecatalog--default
 maintainer: Watson IoT
 description: >-
   The catalog series of components work together to support the ‘catalog’ UX
@@ -9,4 +11,9 @@ description: >-
   features that can be used to support things like searching and filtering.
 framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: Open Source
+aliases:
+  - tile
+  - card
+date_added: 2020-08-04T00:00:00.000Z
