--- a/src/data/index/watson-iot/fixed-button-bar.yml
+++ b/src/data/index/watson-iot/fixed-button-bar.yml
@@ -1,5 +1,5 @@
 name: Fixed button bar
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/fixedbuttonbar/overview
 maintainer: Watson IoT
 description: >-
@@ -7,4 +7,7 @@ description: >-
   Patterns > Forms for design options and guidelines.
 framework: React
 design_asset: Sketch
+platform: Web
+availability: Open Source
 aliases: []
+date_added: 2020-08-04T00:00:00.000Z
