--- a/src/data/index/watson-iot/icon-content-switcher.yml
+++ b/src/data/index/watson-iot/icon-content-switcher.yml
@@ -1,10 +1,15 @@
 name: Icon content switcher
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/iconcontentswitcher/overview
+code_url: >-
+  https://carbon-addons-iot-react.com/?path=/story/watson-iot-button--icon-selection-buttons
 maintainer: Watson IoT
 description: >-
   Within many IoT offerings a number of different ‘view’ formats are required to
   be close at hand to our users over an identical data set. For example; list vs
   map, or list vs tiles, or table vs chart.
+framework: React
 design_asset: Sketch
+platform: Web
 aliases: []
+date_added: 2020-08-04T00:00:00.000Z
