--- a/src/data/index/watson-iot/large-modals.yml
+++ b/src/data/index/watson-iot/large-modals.yml
@@ -1,5 +1,5 @@
 name: Large modals
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/largemodals/overview
 maintainer: Watson IoT
 description: >-
@@ -8,4 +8,6 @@ description: >-
   Advanced filtering, Rule builder and Expression builder UX patterns.
 framework: React
 design_asset: Sketch
+platform: Web
 aliases: []
+date_added: 2020-08-04T00:00:00.000Z
