--- a/src/data/index/watson-iot/menus.yml
+++ b/src/data/index/watson-iot/menus.yml
@@ -1,6 +1,8 @@
 name: Menus
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/menus/overview
+code_url: >-
+  https://carbon-addons-iot-react.com/?path=/story/watson-iot-experimental-flyout-menu--default-example
 maintainer: Watson IoT
 description: >-
   Menus act as an extension to the base set of capabilities that comes with
@@ -8,4 +10,12 @@ description: >-
   content.
 framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: Open Source
+aliases:
+  - overflow
+  - select
+  - dropdown
+  - combo box
+  - multiselect
+date_added: 2020-08-04T00:00:00.000Z
