--- a/src/data/index/watson-iot/page-title-bar.yml
+++ b/src/data/index/watson-iot/page-title-bar.yml
@@ -1,6 +1,7 @@
 name: Page title bar
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/page-title-bar/overview
+code_url: 'https://carbon-addons-iot-react.com/?path=/story/watson-iot-pagetitlebar--base'
 maintainer: Watson IoT
 description: >-
   At the top of every page in an application, beneath the primary header you
@@ -9,4 +10,8 @@ description: >-
   indicators or actions.
 framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: Open Source
+aliases:
+  - header
+date_added: 2020-08-04T00:00:00.000Z
