--- a/src/data/index/watson-iot/status-icons.yml
+++ b/src/data/index/watson-iot/status-icons.yml
@@ -1,5 +1,5 @@
 name: Status icons
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/statusicons/overview
 maintainer: Watson IoT
 description: >-
@@ -7,4 +7,9 @@ description: >-
   and shape. You can use them in a variety of contexts.
 framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: Open Source
+aliases:
+  - notification
+  - alert
+date_added: 2020-08-04T00:00:00.000Z
