--- a/src/data/index/watson-iot/text-inputs.yml
+++ b/src/data/index/watson-iot/text-inputs.yml
@@ -1,7 +1,16 @@
 name: Text inputs
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/textinputs/overview
+code_url: 'https://carbon-addons-iot-react.com/?path=/story/textinput--default'
 maintainer: Watson IoT
+description: >-
+  The IoT PAL extends the base set of available Carbon text inputs by offering a
+  wide range of alternative sizes to fit our use cases such as small, large and
+  the infamous double extra large.
 framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: Open Source
+aliases:
+  - form
+date_added: 2020-08-04T00:00:00.000Z
