--- a/src/data/index/watson-iot/ui-shell-right-panel.yml
+++ b/src/data/index/watson-iot/ui-shell-right-panel.yml
@@ -1,6 +1,8 @@
 name: UI shell right panel
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/ui-shell-header-panel/overview
+code_url: >-
+  https://carbon-addons-iot-react.com/?path=/story/watson-iot-header--header-action-buttons-with-dropdowns
 maintainer: Watson IoT
 description: >-
   Reachable via the utility icons in the header, the UI shell panel provides an
@@ -10,4 +12,8 @@ description: >-
   main workflows (eg: notifications).
 framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: Open Source
+aliases:
+  - navigation
+date_added: 2020-08-04T00:00:00.000Z
