--- a/src/data/index/watson-iot/ui-shell-side-nav.yml
+++ b/src/data/index/watson-iot/ui-shell-side-nav.yml
@@ -1,6 +1,8 @@
 name: UI shell side nav
-link: >-
+website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/ui-shell-side-nav/overview
+code_url: >-
+  https://carbon-addons-iot-react.com/?path=/story/watson-iot-sidenav--sidenav-component
 maintainer: Watson IoT
 description: >-
   The UI shell side nav panel provides users with their primary method of
@@ -10,4 +12,8 @@ description: >-
   but significant ways.
 framework: React
 design_asset: Sketch
-aliases: []
+platform: Web
+availability: Open Source
+aliases:
+  - navigation
+date_added: 2020-08-04T00:00:00.000Z
