--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
     "/node_modules/*"
   ],
   "resolutions": {
-    "carbon-components": "^10.17.0-rc.0",
-    "carbon-components-react": "^7.17.0-rc.0"
+    "carbon-components": "^10.17.0",
+    "carbon-components-react": "^7.17.0"
   },
   "dependencies": {
     "@carbon/charts": "^0.32.12",
     "@carbon/charts-react": "^0.32.12",
-    "@carbon/elements": "^10.16.0-rc.0",
-    "@carbon/icons": "^10.15.0-rc.0",
-    "@carbon/icons-react": "^10.15.0-rc.0",
-    "@carbon/pictograms": "^10.16.0-rc.0",
-    "@carbon/pictograms-react": "^10.16.0-rc.0",
+    "@carbon/elements": "^10.16.0",
+    "@carbon/icons": "^10.15.0",
+    "@carbon/icons-react": "^10.15.0",
+    "@carbon/pictograms": "^10.16.0",
+    "@carbon/pictograms-react": "^10.16.0",
     "@loadable/babel-plugin": "^5.12.0",
     "@loadable/component": "^5.12.0",
     "@loadable/webpack-plugin": "^5.12.0",
