--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -1,4 +1,4 @@
-- title: Get started
+- title: Get started  - work in progress
   pages:
     - title: About Carbon
       path: /get-started/about-carbon
