begin nav updates

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -1,3 +1,12 @@
+- title: All about Carbon
+  pages:
+    - title: What is Carbon?
+      path: /all-about-carbon/what-is-carbon
+      - title: Why use Carbon?
+      path: /all-about-carbon/why-use-carbon
+      - title: Case studies
+      path: /all-about-carbon/case-studies
+  hasDivider: true
 - title: Get started
   pages:
     - title: About Carbon
