--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -6,8 +6,8 @@
       path: /all-about-carbon/case-studies
 - title: Designing
   pages:
-    - title: Get
-      path: /designing/kits
+    - title: Get started
+      path: /designing/get-started
     - title: Kits
       path: /designing/kits
     - title: Design resources
@@ -183,14 +183,6 @@
       path: /patterns/search-pattern
     - title: Text toolbar
       path: /patterns/text-toolbar-pattern
-- title: Get started
-  pages:
-    - title: About Carbon
-      path: /get-started/about-carbon
-    - title: Design
-      path: /get-started/design/sketch
-    - title: Develop
-      path: /get-started/develop/react
 - title: Community assets
   pages:
     - title: Overview
