fix: nav link kits

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -9,7 +9,7 @@
     - title: Get started
       path: /designing/get-started
     - title: Kits
-      path: /designing/kits
+      path: /designing/kits/sketch
     - title: Design resources
       path: /designing/design-resources
     - title: Tutorials
