fix: update developing link in nav

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -17,7 +17,7 @@
 - title: Developing
   pages:
     - title: Frameworks
-      path: /developing/frameworks
+      path: /developing/frameworks/react
     - title: Dev resources
       path: /developing/dev-resources
     - title: Angular tutorial
