--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -217,8 +217,8 @@
   pages:
     - title: FAQs
       path: /help/faqs
-    - title: Certificate of orginality
-      path: /help/certificate-of-orginality
+    - title: Certificate of originality
+      path: /help/certificate-of-originality
     - title: Migation guide
       path: /help/migration-guide
     - title: Contact us
