fix: broken link

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -220,6 +220,6 @@
     - title: Certificate of originality
       path: /help/certificate-of-originality
     - title: Migation guide
-      path: /help/migration-guide
+      path: /help/migration-guide/overview
     - title: Contact us
       path: /help/contact-us
