docs: review yaml and what is carbon

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -46,7 +46,7 @@
       path: /contributing/contribute-pictograms
     - title: Add ons
       path: /contributing/add-ons
-- title: What's happening?
+- title: What's happening
   pages:
     - title: Changelog and roadmap
       path: /whats-happening/changelog-and-roadmap
@@ -217,9 +217,9 @@
   pages:
     - title: FAQs
       path: /help/faqs
-    - title: Certificate of originality
+    - title: Certificate of Originality
       path: /help/certificate-of-originality
-    - title: Migation guide
+    - title: Migration guide
       path: /help/migration-guide/overview
     - title: Contact us
       path: /help/contact-us
