docs: designing, developing, latest news, events,

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -18,7 +18,7 @@
   pages:
     - title: Frameworks
       path: /developing/frameworks/react
-    - title: Dev resources
+    - title: Developer resources
       path: /developing/dev-resources
     - title: Angular tutorial
       path: /developing/angular-tutorial/overview
@@ -48,9 +48,9 @@
       path: /contributing/add-ons
 - title: What's happening
   pages:
-    - title: Changelog and roadmap
+    - title: Changelog & roadmap
       path: /whats-happening/changelog-and-roadmap
-    - title: News and articles
+    - title: News & articles
       path: /whats-happening/news-and-articles
     - title: Events
       path: /whats-happening/events
