add developing get-started page

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -16,6 +16,8 @@
       path: /designing/tutorials
 - title: Developing
   pages:
+    - title: Get started
+      path: /developing/get-started
     - title: Frameworks
       path: /developing/frameworks/react
     - title: Developer resources
