update carbon charts to 0.34.11 and add new demos

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "carbon-components-react": "^7.16.0"
   },
   "dependencies": {
-    "@carbon/charts": "^0.32.12",
-    "@carbon/charts-react": "^0.32.12",
+    "@carbon/charts": "0.34.11",
+    "@carbon/charts-react": "0.34.11",
     "@carbon/elements": "^10.14.0",
     "@carbon/icons": "^10.13.0",
     "@carbon/icons-react": "^10.13.0",
