update carbon charts to 0.34.11, add new demos (#1568)
* update carbon charts to 0.34.11 and add new demos

* design-only tag for treemap chart

* add data visualization storybook links to Resources page

* update radar & horizontal stacked bar icons

--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
-    "@carbon/charts": "^0.32.12",
-    "@carbon/charts-react": "^0.32.12",
+    "@carbon/charts": "0.34.11",
+    "@carbon/charts-react": "0.34.11",
     "@carbon/elements": "^10.16.0",
     "@carbon/icons": "^10.15.0",
     "@carbon/icons-react": "^10.15.0",
