docs: feedback from design rview, event draft info

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -52,7 +52,7 @@
   pages:
     - title: Changelog & roadmap
       path: /whats-happening/changelog-and-roadmap
-    - title: News & articles
+    - title: News & reading
       path: /whats-happening/news-and-articles
     - title: Events
       path: /whats-happening/events
