--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev:clean": "gatsby clean && yarn dev",
     "clean": "gatsby clean",
     "build": "node --max-old-space-size=4096 ./node_modules/.bin/gatsby build --prefix-paths",
+	"builda": "gatsby build --prefix-paths",
     "build:clean": "gatsby clean && yarn build",
     "build:analyze": "yarn install --force && yarn clean && ANALYZE=true yarn build",
     "serve": "gatsby serve",
