--- a/.github/workflows/d.yml
+++ b/.github/workflows/d.yml
@@ -19,10 +19,10 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Install packages
-        run: npm run 
+        run: yarn install 
 
       - name: Build site
-        run: yarn build
+        run: yarn builda
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.5.9
