--- a/.github/workflows/Antoehr.yml
+++ b/.github/workflows/Antoehr.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           node-version: 12.x
 
+      - name: Install Gatsby
+        run: yarn global add gatsby-cli
+
       - name: Install packages
         run: yarn install 
 
