--- a/.github/workflows/Antoehr.yml
+++ b/.github/workflows/Antoehr.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 12.x
 
       - name: Install Gatsby
-        run: yarn global add gatsby-cli
+        run: npm install -g gatsby-cli
 
       - name: Install packages
         run: yarn install 
