Added size of 4 gB

--- a/.github/workflows/Antoehr.yml
+++ b/.github/workflows/Antoehr.yml
@@ -24,7 +24,7 @@ jobs:
         run: yarn install 
 
       - name: Build site
-        run: gatsby build --prefix-paths
+        run: node --max-old-space-size=4096 gatsby build --prefix-paths
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.5.9
