--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
         description: "Reason"
   push:
     branches:
-      - master
+      - mastermaster # renamed to mastermaster to prevent builds. This is optimized builds using cache. Disabled as no understanding
     paths-ignore: 
       - 'docs/**'
       - '.vscode/**'
