--- a/conf.d/rewrite.conf
+++ b/conf.d/rewrite.conf
@@ -32,4 +32,7 @@ rewrite /help/faq /help/faqs permanent;
 
 # Developing
 rewrite /get-started/develop/(.*) /developing/frameworks/\$1 permanent;
-rewrite /tutorial/(.*) /developing/\$1 permanent;
+rewrite /resources /developing/developer-resources permanent;
+rewrite /tutorial/angular(.*) /developing/angular-tutorial\$1 permanent;
+rewrite /tutorial/react(.*) /developing/react-tutorial\$1 permanent;
+rewrite /tutorial/vue(.*) /developing/vue-tutorial\$1 permanent;
